# parides

./: .dockerignore  .flake8  .gitignore  .travis.yml  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  WORKSPACE  build.sh  example.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-ci.yml  dockerpublish.yml  python-ci.yml  pythonpackage.yml
docs/: index.md
parides/: cli.py  converter.py  prom_conv.py  prom_service.py
parides/cli/: main.py
tests/: BUILD  constants.py  context.py  test_basic.py  test_integration.py
tests/data/: incident_1_X.csv
tests/integration/: test_prom_integration.py
tests/unit/: test_prom_conv.py
